@@ -1,0 +1,1 @@
+./test/schemas/mixed0_0.xml validates
