@@ -1,0 +1,1 @@
+./test/schemas/mixed1_0.xml validates
