@@ -1,0 +1,5 @@
+<xs:schema xmlns:xs='http://www.w3.org/2001/XMLSchema'>
+ <xs:element name='my'>
+  <xs:complexType mixed='true'/>
+ </xs:element>
+</xs:schema>
