@@ -1,0 +1,7 @@
+<xs:schema xmlns:xs='http://www.w3.org/2001/XMLSchema'>
+ <xs:element name='my'>
+  <xs:complexType mixed='true'>
+   <xs:attribute name='myattr' type='xs:string' use='required'/>
+  </xs:complexType>
+ </xs:element>
+</xs:schema>
